solve padding problem, edit text alignment

--- a/scss/layout/_readmore.scss
+++ b/scss/layout/_readmore.scss
@@ -1,7 +1,8 @@
 .content2 {
 	border-left: none;
-	padding: 30px 0;
-	padding: clamp(20px,#{$h-white},62px) 0;
+	//I re-used the class because postcss is removing the duplicated padding
+	&{padding: 30px 0}
+	padding: max(#{$h-white},62px) 0;
 	@media (max-width: $md) {
 		.image{
 			display: none;
@@ -28,8 +29,10 @@
 		font-size: $fs2;
 		line-height: 23px;
 		color: $paragraphColor;
-		text-align: justify;
 		margin:38px 0;
+		@include mq($md,max){
+			text-align: center;
+		}
 	}
 	p.last{
 		margin-bottom: 0;
